--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/form.html"></include>
     <include src="./partials/load_more_button.html"></include>
-
+<ul class="gallery"></ul>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
